Fixed some CSS bugs found on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -801,6 +801,8 @@ ul.faq li>div h3 {
     font-size: 1.35em;
     font-family: 'Lato';
     line-height: 1.7em;
+    font-weight: normal;
+    color: #092638;
 }
 .addmargin {
     left: 20px;
@@ -936,7 +938,7 @@ img.grayscale:hover {
 }
 .boardtitle {
     margin-top: -8px;
-    font-family: sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: 1.2em;
     color: #092638;
     margin-left: 10%;
@@ -995,4 +997,16 @@ img.grayscale:hover {
     background-color: #0b2d42;
     border-radius: 7px;
     padding: 5px 0 5px ;
+}
+
+.dhirana_title {
+    font-size:5em;
+    line-height:90px;
+    color:#fff;
+}
+
+@media screen and (max-width: 450px) {
+    .dhirana_title {
+        font-size: 4em;
+    }
 }
